force-app/main/default/objects/Prospect_Scoring_Log__c/Prospect_Scoring_Log__c.object-meta.xml
<CustomObject>
    <description>DCP- 35842 - Marketing Scoring Log. This would be log for any scoring change for Lead and Contact object</description>
    <label>Marketing Scoring Log</label>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Marketing Scoring Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Scoring Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>