force-app/main/default/objects/Prospect_Scoring_Log__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <description>DCP-35842- Marketing Scoring Log (Custom Object)</description>
    <label>Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>