force-app/main/default/objects/Prospect_Scoring_Log__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact Id associated with Scoring record</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Marketing Scoring Logs</relationshipLabel>
    <relationshipName>Prospect_Scoring_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>