force-app/main/default/objects/Prospect_Scoring_Log__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DCP-35842- Marketing Scoring Log (Custom Object)</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Marketing Scoring Logs</relationshipLabel>
    <relationshipName>Prospect_Scoring_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>