force-app/main/default/objects/Prospect_Scoring_Log__c/fields/New_Score_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Score_Value__c</fullName>
    <description>DCP-35842- Marketing Scoring Log (Custom Object)</description>
    <label>New Score Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>