force-app/main/default/objects/Prospect_Scoring_Log__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>DCP-35842- Marketing Scoring Log (Custom Object)</description>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>