force-app/main/default/objects/Prospect_Scoring_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>User Lookup</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Prospect_Scoring_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>